src/objects/Product_Price__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Acquisition</fullName>
                </value>
                <value>
                <fullName>Renewal</fullName>
                </value>
                <value>
                <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Product Prices</relationshipLabel>
        <relationshipName>Product_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Price</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Product Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>